--- a/myapp/views/main/tram_regr_data.ejs
+++ b/myapp/views/main/tram_regr_data.ejs
@@ -152,7 +152,7 @@
 				</div>
 
 				<!-- Chart -->
-				<div id="chart" class="tab-pane fade in active">
+				<div id="chart" class="tab-pane fade">
 					<div id = "chart_time"></div>
 					<div id = "chart_error"></div>
 
