--- a/myapp/views/main/tram_regr_data.ejs
+++ b/myapp/views/main/tram_regr_data.ejs
@@ -57,7 +57,7 @@
 								<tr>
 									<th colspan="7">Input Variables</th>
 									<th rowspan="2">Actual</th>
-									<th colspan="<%= mode_count %>">Predicted Time Spent (and Error)</th>
+									<th colspan="<%= mode_count %>">Predicted Time Spent (and Absolute Error)</th>
 								</tr>
 							</thead>
 							<thead>
