--- a/myapp/views/main/tram_regr_data.ejs
+++ b/myapp/views/main/tram_regr_data.ejs
@@ -221,7 +221,7 @@
 									fontSize: 16,
 								},
 								legend: {
-                        			position: "right",
+                        			position: "top",
                    				},
 								scales: {
 									xAxes: [{
@@ -253,7 +253,7 @@
 									fontSize: 16,
 								},
 								legend: {
-                        			position: "right",
+                        			position: "top",
                    				},
 								scales: {
 									xAxes: [{
