--- a/myapp/views/main/header.ejs
+++ b/myapp/views/main/header.ejs
@@ -28,10 +28,10 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Trams
 							<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="/trams/prediction">Travelling Time Prediction</a></li>
-								<li><a href="/trams/prediction_section">Travelling Time Prediction of a Section</a></li>
-								<li><a href="/trams/data_regression">Travelling Time Prediction with Existing Data</a></li>
-								<li><a href="/trams/data">View Raw Data</a></li>
+								<li><a href="/trams/predict">Travelling Time Prediction</a></li>
+								<li><a href="/trams/predict_sect">Travelling Time Prediction of a Section</a></li>
+								<li><a href="/trams/predict_exist">Travelling Time Prediction with Existing Data</a></li>
+								<li><a href="/trams/view_data">View Raw Data</a></li>
 							</ul>
 						</li>
 						<%# Menu End -------------------------------------------------------- %>
