--- a/myapp/views/main/tram_view_data.ejs
+++ b/myapp/views/main/tram_view_data.ejs
@@ -1,11 +1,46 @@
 <%- include('header'); %>
-	<%- include('tram_data_searchbox'); %>
 
-	<style>
-		.table td {text-align: center;}
-		.table th {text-align: center;}
-		.table {font-size:0.8em;}
-	</style>
+	<%# Search Box --------------------------------------------------------------------- %>
+
+	<%
+	function section(compare){
+		if (typeof params === "undefined"){
+			return "";
+		}else{
+			return (params.stopA+"/"+params.stopB == compare) ? " selected" : "";
+		}
+	}
+	%>
+	<div class="panel panel-default">
+		<div class="panel-heading"><b><%= title %></b></div>
+		<div class="panel-body">
+			<form>
+				<div class="form-group">
+					<div class="row">
+						<%# Section %>
+						<label class="control-label col-sm-3 col-lg-2" for="section">Select section:</label>
+						<div class="col-sm-9 col-lg-4">
+							<select class="form-control" id="section">
+								<option value="">-- Please select --</option>
+								<% for (var i in searchbox.sections){ %>
+								<option value = "<%= searchbox.sections[i].from_to %>"<%= section(searchbox.sections[i].from_to) %>><%= searchbox.sections[i].caption %></option>
+								<% } %>
+							</select>
+						</div>
+						<%# Filter: Date %>
+						<label class="control-label col-sm-3 col-lg-2" for="date">Date:</label>
+						<div class="col-sm-9 col-lg-4">
+								<input type="text" class="datepicker form-control" id="date">
+						</div>
+					</div>
+					<div class="row">
+						<br/>
+						<button type="button" class="btn-block btn-default" onclick="searchbox_submit();">View</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
 
 	<script language = "javascript">
 		//Date & Time Pickers
@@ -15,12 +50,20 @@
 		function searchbox_submit(){
 			if ($("#section").val() != "" && $("#date").val() != ""){
 				//Valid
-				var URL = "/trams/data/" + $("#section").val() + "/" + $("#date").val();
+				var URL = "/trams/view_data/" + $("#section").val() + "/" + $("#date").val();
 				//Go to new URL
 				window.location.href = URL;
 			}
 		}
 	</script>
+
+	<%# Search Box Ends --------------------------------------------------------------------- %>
+
+	<style>
+		.table td {text-align: center;}
+		.table th {text-align: center;}
+		.table {font-size:0.8em;}
+	</style>
 
 	<% if (typeof params !== "undefined"){ %>
 
@@ -29,10 +72,10 @@
 				$("#date").val("<%= params.yy %>/<%= params.mm %>/<%= params.dd %>");
 				//Next & Prev day button
 				function btn_prev_day(){
-					window.location.href = "/trams/data/<%= params.stopA %>/<%= params.stopB %>/<%= date_prev %>";
+					window.location.href = "/trams/view_data/<%= params.stopA %>/<%= params.stopB %>/<%= date_prev %>";
 				}
 				function btn_next_day(){
-					window.location.href = "/trams/data/<%= params.stopA %>/<%= params.stopB %>/<%= date_next %>";
+					window.location.href = "/trams/view_data/<%= params.stopA %>/<%= params.stopB %>/<%= date_next %>";
 				}
 		</script>
 
