--- a/myapp/views/main/header.ejs
+++ b/myapp/views/main/header.ejs
@@ -31,6 +31,7 @@
 								<li><a href="/trams/predict">Travelling Time Prediction</a></li>
 								<li><a href="/trams/predict_sect">Travelling Time Prediction of a Section</a></li>
 								<li><a href="/trams/predict_exist">Travelling Time Prediction with Existing Data</a></li>
+								<li><a href="/trams/predict_week">Travelling Time Prediction Error Summary with Weekly Data</a></li>
 								<li><a href="/trams/view_data">View Raw Data</a></li>
 							</ul>
 						</li>
